# stapel-translate

./: CHANGELOG.md  CONTRIBUTING.md  MODULE.md  Makefile  README.md  SECURITY.md  __init__.py  actions.py  admin.py  apps.py  autofill.py  collectors.py  conf.py  conftest.py  dashboard_serializers.py  dashboard_views.py  dto.py  error_collector.py  events.py  figma_serializers.py  figma_views.py  functions.py  gdpr.py  mixins.py  models.py  notification_collector.py  permissions.py  providers.py  pyproject.toml  ruff.toml  serializers.py  tasks.py  urls.py  urls_v1.py  utils.py  views.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json
fixtures/builtin/: ar.json  de.json  en.json  es.json  fr.json  he.json  hi.json  hr.json  hu.json  it.json  ja.json  ko.json  lb.json  pl.json  pt.json  ru.json  sr.json  tr.json  uk.json  zh.json
management/commands/: autofill_translations.py  collect_translations.py  dump_translations.py  load_builtin_translations.py  translation_backlog.py
migrations/: 0001_initial.py  0002_add_revision_to_translation.py  0003_replace_verified_with_per_language.py  0004_add_languages.py  0005_add_llm_translated.py  0006_authorizedtranslator.py  0007_translationentry_comment.py  0008_alter_translationentry_source.py  0009_translationhistory.py  0010_figma_api_key.py  0011_remove_serbo_croatian.py  0012_add_serbian_croatian.py  0013_add_translator_comment_and_refs.py  0014_translationentry_order.py  0015_authorizedtranslator_allowed_languages_and_more.py  0016_translationentry_screenshot.py  0017_translationvalue.py  0018_copy_language_columns_to_values.py  0019_remove_language_columns.py  0020_figmaapikey_hashed_keys.py
schemas/emits/: translations.changed.json
schemas/functions/: translate.resolve.json
templates/admin/translations/: change_list_with_lang.html
templates/dashboard/: base.html  index.html  language.html  login.html  translation.html
tests/: conftest.py  test_autofill.py  test_backlog_command.py  test_builtin_fixtures.py  test_builtin_loader.py  test_collect_command.py  test_collectors.py  test_conf.py  test_dashboard_api.py  test_dump_translations.py  test_events.py  test_export_import.py  test_figma_auth.py  test_llm_help.py  test_migrations_sanity.py  test_models.py  test_nav_integration.py  test_providers.py  test_public_api.py  test_resolve_function.py  test_serializer_seams.py  test_surface_containment.py  test_views.py
