[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-translate"
version = "0.2.0"
description = "AI-powered content translation Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "translation", "i18n", "ai"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.1.0",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.3"]
all = ["stapel-translate[kafka]"]

[tool.setuptools]
package-dir = {"stapel_translate" = "."}
packages = [
    "stapel_translate",
    "stapel_translate.management",
    "stapel_translate.management.commands",
    "stapel_translate.migrations",
    "stapel_translate.tests",
]

[tool.setuptools.package-data]
stapel_translate = ["py.typed", "migrations/*.py", "schemas/**/*.json", "templates/**/*", "migrations/**/*.py", "fixtures/builtin/*.json"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"
