[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-translate"
version = "0.4.8"
description = "AI-powered content translation Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "translation", "i18n", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.10,<0.11",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-translate"
Repository = "https://github.com/usestapel/stapel-translate"
Documentation = "https://github.com/usestapel/stapel-translate#readme"
Changelog = "https://github.com/usestapel/stapel-translate/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-translate/issues"

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.3"]
all = ["stapel-translate[kafka]"]

[tool.setuptools]
package-dir = {"stapel_translate" = "."}
packages = [
    "stapel_translate",
    "stapel_translate.management",
    "stapel_translate.management.commands",
    "stapel_translate.migrations",
]

[tool.setuptools.package-data]
stapel_translate = ["py.typed", "migrations/*.py", "schemas/**/*.json", "templates/**/*", "migrations/**/*.py", "fixtures/builtin/*.json"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
